--- a/Code/Roberts/RobertsC_Visualization.ipynb
+++ b/Code/Roberts/RobertsC_Visualization.ipynb
@@ -53,6 +53,188 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "survived",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "pclass",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "sex",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "sibsp",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "parch",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "fare",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "embarked",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "class",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "who",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "adult_male",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "deck",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "embark_town",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "alive",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "alone",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "d47a398d-9d96-4320-b074-fe9622095460",
+       "rows": [
+        [
+         "0",
+         "0",
+         "3",
+         "male",
+         "22.0",
+         "1",
+         "0",
+         "7.25",
+         "S",
+         "Third",
+         "man",
+         "True",
+         null,
+         "Southampton",
+         "no",
+         "False"
+        ],
+        [
+         "1",
+         "1",
+         "1",
+         "female",
+         "38.0",
+         "1",
+         "0",
+         "71.2833",
+         "C",
+         "First",
+         "woman",
+         "False",
+         "C",
+         "Cherbourg",
+         "yes",
+         "False"
+        ],
+        [
+         "2",
+         "1",
+         "3",
+         "female",
+         "26.0",
+         "0",
+         "0",
+         "7.925",
+         "S",
+         "Third",
+         "woman",
+         "False",
+         null,
+         "Southampton",
+         "yes",
+         "True"
+        ],
+        [
+         "3",
+         "1",
+         "1",
+         "female",
+         "35.0",
+         "1",
+         "0",
+         "53.1",
+         "S",
+         "First",
+         "woman",
+         "False",
+         "C",
+         "Southampton",
+         "yes",
+         "False"
+        ],
+        [
+         "4",
+         "0",
+         "3",
+         "male",
+         "35.0",
+         "0",
+         "0",
+         "8.05",
+         "S",
+         "Third",
+         "man",
+         "True",
+         null,
+         "Southampton",
+         "no",
+         "True"
+        ]
+       ],
+       "shape": {
+        "columns": 15,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -249,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +455,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,17 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Drop the 'deck' since it has a high percentage of missing values\n",
-    "titanic.drop('deck', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +488,7 @@
        "Name: count, Length: 88, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,279 +499,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>class</th>\n",
-       "      <th>who</th>\n",
-       "      <th>adult_male</th>\n",
-       "      <th>embark_town</th>\n",
-       "      <th>alive</th>\n",
-       "      <th>alone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.4583</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Queenstown</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.0000</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Second</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2250</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2250</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.8792</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Queenstown</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>859</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2292</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>863</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>69.5500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>868</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.5000</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>878</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.8958</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>888</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>23.4500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>177 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     survived  pclass     sex  age  sibsp  parch     fare embarked   class  \\\n",
-       "5           0       3    male  NaN      0      0   8.4583        Q   Third   \n",
-       "17          1       2    male  NaN      0      0  13.0000        S  Second   \n",
-       "19          1       3  female  NaN      0      0   7.2250        C   Third   \n",
-       "26          0       3    male  NaN      0      0   7.2250        C   Third   \n",
-       "28          1       3  female  NaN      0      0   7.8792        Q   Third   \n",
-       "..        ...     ...     ...  ...    ...    ...      ...      ...     ...   \n",
-       "859         0       3    male  NaN      0      0   7.2292        C   Third   \n",
-       "863         0       3  female  NaN      8      2  69.5500        S   Third   \n",
-       "868         0       3    male  NaN      0      0   9.5000        S   Third   \n",
-       "878         0       3    male  NaN      0      0   7.8958        S   Third   \n",
-       "888         0       3  female  NaN      1      2  23.4500        S   Third   \n",
-       "\n",
-       "       who  adult_male  embark_town alive  alone  \n",
-       "5      man        True   Queenstown    no   True  \n",
-       "17     man        True  Southampton   yes   True  \n",
-       "19   woman       False    Cherbourg   yes   True  \n",
-       "26     man        True    Cherbourg    no   True  \n",
-       "28   woman       False   Queenstown   yes   True  \n",
-       "..     ...         ...          ...   ...    ...  \n",
-       "859    man        True    Cherbourg    no   True  \n",
-       "863  woman       False  Southampton    no  False  \n",
-       "868    man        True  Southampton    no   True  \n",
-       "878    man        True  Southampton    no   True  \n",
-       "888  woman       False  Southampton    no  False  \n",
-       "\n",
-       "[177 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Examine the rows with missing values in the 'age' column\n",
-    "missing_age = titanic[titanic['age'].isnull()]\n",
-    "missing_age"
+    "## Accurate Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Misleading Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Passenger Class and Survival"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imputing Values for 'Deck'"
    ]
   },
   {
